--- a/src/views/Login.ejs
+++ b/src/views/Login.ejs
@@ -11,7 +11,7 @@
     <input type="password" name="password" required />
     <div class="password error"></div>
   </div>
-  
+
   <button class="btn">Login</button>
   <p>Do you not have an account?<a href="/signup">signup</a></p>
 </form>
@@ -25,37 +25,31 @@
     e.preventDefault();
 
     // reset errors
-    
+
     emailError.textContent = "";
     passwordError.textContent = "";
-    
+
     // get values
-    
+
     const email = form.email.value;
     const password = form.password.value;
-    
 
-    
-      try {
-        const res = await fetch("/login", {
-          method: "POST",
-          body: JSON.stringify({
-            email,
-            password
-          }),
-          headers: { "Content-Type": "application/json" },
-        });
-        const data = await res.json();
-        if (data.errors) {
-          emailError.textContent = data.errors.email;
-          passwordError.textContent = data.errors.password;
-          
-        }
-        if (data.user) {
-          location.assign("/");
-        }
-      } catch (err) {
-        console.log(err);
+    try {
+      const res = await fetch("/login", {
+        method: "POST",
+        body: JSON.stringify({ email, password }),
+        headers: { "Content-Type": "application/json" },
+      });
+      const data = await res.json();
+      if (data.errors) {
+        emailError.textContent = data.errors.email;
+        passwordError.textContent = data.errors.password;
       }
-    });
+      if (data.user) {
+        location.assign("/");
+      }
+    } catch (err) {
+      console.log(err);
+    }
+  });
 </script>
