added a header with navbar

--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,20 +1,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header</title>
+    <link rel="stylesheet" href="/styles.css" />
+    <title>baazarBay</title>
 </head>
 <body>
-    <nav>
-        <div>Your Logo</div>
+    <nav class="navbar">
+        <div>BaazarBay</div>
         <div>
-            <% if (isAuthenticated) { %>
-                <span>Hello, <%= userName %>!</span>
+            <% if (user) { %>
+                <span>Hello, <%= user.firstName + user.lastName %>!</span>
                 <form action="/logout" method="POST" style="display: inline;">
-                    <button type="submit">Logout</button>
+                    <button class="logout-button" type="submit">Logout</button>
                 </form>
             <% } else { %>
-                <a href="/login"><button>Sign In</button></a>
-                <a href="/signup"><button>Sign Up</button></a>
+                <a href="/login"><button class="btn">Sign In</button></a>
+                <a href="/signup"><button class=" btn">Sign Up</button></a>
             <% } %>
         </div>
     </nav>
