included header in additems

--- a/src/views/addItem.ejs
+++ b/src/views/addItem.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/styles.css" />
+<%- include("./partials/head")  %>
 <form action="addItem" class="form-container">
   <h2>Add your product</h2>
   <div class="input-group">
