--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -6,7 +6,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div>BaazarBay</div>
+        <div>BazaarBay</div>
         <div>
             <% if (user) { %>
                 <span>Hello, <%= user.firstName + user.lastName %>!</span>
