--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -6,7 +6,11 @@
 </head>
 <body>
     <nav class="navbar">
-        <div>BazaarBay</div>
+        <div>
+            
+                <img src="/logo1.png" alt="BazaarBay Logo" style="height: 40px;">
+            
+        </div>
         <div>
             <% if (user) { %>
                 <span>Hello, <%= user.firstName + user.lastName %>!</span>
