--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -13,15 +13,13 @@
         </div>
         <div>
             <% if (user) { %>
-                <span>Hello, <%= user.firstName + user.lastName %>!</span>
-                <form action="/logout" method="POST" style="display: inline;">
-                    <button class="logout-button" type="submit">Logout</button>
-                </form>
-            <% } else { %>
-                <a href="/login"><button class="btn">Sign In</button></a>
-                <a href="/signup"><button class=" btn">Sign Up</button></a>
-            <% } %>
-        </div>
+               <span>Hello, <%= user.firstName + user.lastName %>!</span>
+               <a href="/logout"><button class="btn">logout</button></a>
+           <% } else { %>
+               <a href="/login"><button class="btn">Sign In</button></a>
+               <a href="/signup"><button class=" btn">Sign Up</button></a>
+           <% } %> 
+       </div>
     </nav>
 </body>
 </html>
