--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -14,7 +14,7 @@
         <div>
             <% if (user) { %>
                <span>Hello, <%= user.firstName + user.lastName %>!</span>
-               <a href="/logout"><button class="btn">logout</button></a>
+               <a href="/logout"><button class="logout-button">logout</button></a>
            <% } else { %>
                <a href="/login"><button class="btn">Sign In</button></a>
                <a href="/signup"><button class=" btn">Sign Up</button></a>
