added css for uploadPhtot

--- a/src/views/photoUpload.ejs
+++ b/src/views/photoUpload.ejs
@@ -1,12 +1,12 @@
 <link rel="stylesheet" href="/styles.css" />
 <form id = "itemPhoto" class="form-container">
     <div class="input-group"></div>
-      <label for="Photo">Product photo</label>
       <input type="file" name="Photo" accept=".jpg,.jpeg" required />
       <div class="Photo error"></div>
     </div>
     
-    <button action="/photoUpload" class="btn">Upload photo</button>
+    <button action="/photoUpload" class="addPhoto-button">add photo</button>
+    <button action="/photoUpload" class="addPhoto-button">next</button>
     
   </form>
   <script>
