--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -133,3 +133,43 @@ nav {
   font-weight: bold;
   transition: background-color 0.3s ease; /* Smooth hover transition */
 }
+
+.addPhoto-button {
+  width: 49%;
+  padding: 12px;
+  background-color: #ffca28;
+  color: #000;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+/* File input styling */
+input[type="file"] {
+  border: 2px dashed #ffca28;
+  padding: 10px;
+  border-radius: 8px;
+  transition: border-color 0.3s ease;
+  cursor: pointer;
+}
+
+input[type="file"]:hover {
+  border-color: #ffca28;
+}
+
+input[type="file"]::-webkit-file-upload-button {
+  background-color: #ffca28;
+  color: #000;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+input[type="file"]::-webkit-file-upload-button:hover {
+  background-color: #ffca28;
+}
